# Proyecto_final_MLops

./: .gitignore  Dockerfile  README.md  app.py  pyproject.toml  requirements.txt
flows/: ORQUESTACION_README.md  bank_marketing_experiment_tracking_flow.py  bank_marketing_flow.py
models/: model_registry.py
notebooks/: EDA.ipynb
notebooks/02-Experiment-Tracking/: 2_Experiment_Tracking.ipynb  Experiment_Tracking copy.ipynb  Experiment_Tracking.ipynb  predictions_lr.csv
notebooks/data/processed/: dataset.parquet
templates/: bank_marketing.html
