[project]
name = "proyecto-final-mlops"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "category-encoders==2.9.0",
    "fastapi==0.115.0",
    "imbalanced-learn>=0.14.1",
    "ipykernel==7.2.0",
    "jinja2==3.1.6",
    "joblib==1.5.3",
    "jupyter>=1.1.1",
    "matplotlib==3.10.8",
    "mlflow==3.11.1",
    "optuna==4.8.0",
    "pandas==2.3.3",
    "pathlib>=1.0.1",
    "prefect>=3.6.26",
    "pyarrow==23.0.1",
    "scikit-learn==1.8.0",
    "seaborn==0.13.2",
    "ucimlrepo==0.0.7",
    "uvicorn[standard]==0.32.0",
    "xgboost==3.2.0",
]
